# RoomMateHub

./: .gitignore  README.md  pyproject.toml  settings.gradle.kts
.github/workflows/: deploy.yml
RMH/: README.md  db.sqlite3  manage.py  pyproject.toml
RMH/GestAnnounce/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
RMH/GestAnnounce/migrations/: 0001_initial.py  0002_housingapplication.py  0003_rename_photo_housing_photo_url.py  0004_rename_photo_url_housing_photo.py
RMH/GestUsers/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
RMH/GestUsers/migrations/: 0001_initial.py  0002_alter_profile_filiere_alter_profile_hobbies.py  0003_profile_academic_interests_profile_cleanliness_and_more.py
RMH/RMH/: asgi.py  settings.py  urls.py  wsgi.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: baseline_person_pin_24.xml  border_shape.xml  button_background.xml  wave.xml  wave__1_.xml  wave__2_.xml  wave__3_.xml  wave__4_.xml  wave__5_.xml  wave__6_.xml  wave__7_.xml  wave__8_.xml
app/src/main/res/layout/: activity_main.xml  activity_right.xml  annonce_list_layout.xml  annonce_view.xml  app_bar_right.xml  client_view.xml  content_right.xml  create_annonce_layout.xml  create_user_layout.xml  detail_annonce_layout.xml  fragment_gallery.xml  fragment_home.xml  fragment_list_annonce.xml  fragment_list_annonce_.xml  home_layout.xml  login_layout.xml  main_menu_layout.xml  mdp_layout.xml  modify_user_layout.xml  nav_header_right.xml  options_barre.xml  password_forgoten_layout.xml  profil_view.xml  (+3 more)
(+58 files in other folders)
